# reactos_posix

./: CMakeLists.txt  README.md
etc/: live_start_vi.BAT  profile  termcap
etc/X11/locale/: locale.alias  locale.dir
etc/X11/locale/C/: XLC_LOCALE
lib/xlib6/: CMakeLists.txt  README.md
lib/xlib6/compat/: langinfo.h  locale.h  math.h  nl_types.h  strings.h  xpsxcompat.c  xpsxlibc.c  xpsxmotif.c  xpsxpre6.h
lib/xlib6/compat/machine/: limits.h
lib/xlib6/compat/sys/: signal.h
lib/xlib6/ice/: Xtranspsxice.c
lib/xlib6/include/X11/: XlibConf.h  Xpoll.h
lib/xlib6/include/X11/Xtrans/: Xtrans.h
lib/xlib6/include/X11/extensions/: Print.h
lib/xlib6/include/Xm/: MwmUtil.h  Xm.h
lib/xlib6/motif/Xm/: XmMsgCatI.h
lib/xlib6/regex/: regerror.c  regexec.ih
lib/xlib6/src/: OpenDis.c  Xtranspsx6.c  ks_tables.h  lcDB.c  lcPubWrap.c  psxConnDis.c
lib/xlib6/xmu/: config.h
lib/xlib6/xt/: StringDefs.c
psxcrt/: CMakeLists.txt  MISC.H  STDDEF.H  STDIO.H  STRNCAT.C  STRNCMP.C  crt0.c  ctype.c  err.c  fnmatch.c  fnmatch.h  getopt.c  heap.c  lstat.c  misc.c  mknod.c  scandir.c  scanf.c  seekdir.c  setjmp.c  snprintf.c  stdio.c  strncpy.c  telldir.c  timeconv.c  utimes.c  warn.c
psxcrt/sys/: cdefs.h  errno.h
src/: CMakeLists.txt  posixapp.cmake
src/cat/: CAT.C  CMakeLists.txt
src/cp/: CMakeLists.txt  CP.C  PATH.C
src/find/: CMakeLists.txt  EXTERN.H  FIND.C  FIND.H  FNMATCH.C  FTS.C  FUNCTION.C  GLOB.C  LS.C  MAIN.C  MISC.C  OPERATOR.C  OPTION.C
src/grep/: CMakeLists.txt  EGREP.C  GETOPT.C  GLOB.C  GLOB.H  GREP.C  REGERROR.C  REGEXP.C
src/ls/: BSTAT.C  CMP.C  CMakeLists.txt  LS.C  LS.H  PRINT.C  UTIL.C
src/mkdir/: CMakeLists.txt  MKDIR.C
src/rm/: CMakeLists.txt  GLOB.C  GLOB.H  RM.C
src/rmdir/: CMakeLists.txt  RMDIR.C
src/sh/: ALLOC.C  ALLOC.H  CMakeLists.txt  CONFIG.H  C_KSH.C  C_SH.C  C_TEST.C  EDIT.C  EDIT.H  EMACS.C  EVAL.C  EXEC.C  EXPR.C  GETOPTS.C  HISTORY.C  IO.C  JOBS.C  LEX.C  LEX.H  MAIL.C  MAIN.C  MISC.C  SH.C  SH.H  SYN.C  TABLE.C  TABLE.H  TRACE.C  TRACE.H  TRAP.C  TREE.C  TREE.H  TTY.H  ULIMIT.C  VAR.C  VI.C
src/touch/: CMakeLists.txt  TOUCGLOB.C  TOUCH.C
src/vi/: BLK.C  CMakeLists.txt  CONFIG.H  CURSES.C  CURSES.H  JUNK.C  MAIN.C  MISC.C  MOVE2.C  OPTS.C  SHELL.C  SYSTEM.C  TIO.C  TMP.C  VI.H
